--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ scipy>=1.12
 scikit-learn>=1.4
 lightgbm>=4.0
 
-pymssa>=0.8
+git+https://github.com/kieferk/pymssa.git#egg=pymssa
 reservoirpy>=0.4
-skccm>=0.4
+git+https://github.com/nickc1/skccm.git#egg=skccm
