--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,8 @@ jobs:
 
       - name: Install deps
         run: |
-          python -m pip install -U pip
-          if [ -f pyproject.toml ]; then
-            pip install -e .
-          elif [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          fi
+          python -m pip install -U pip setuptools wheel
+          pip install --no-build-isolation -r requirements.txt
           pip install pytest
 
       - name: Lint & format
